<resources>
    <string name="app_name">TETOPergunta</string>
    <string name="titulo_main">Lista Cadastros</string>
    <string name="title_activity_modulo1">Modulo1</string>
    <string name="title_activity_modulo2">Modulo2</string>
    <string name="title_activity_modulo3">Modulo3</string>
    <string name="modulo0_A">A - Dados da comunidade</string>
    <string name="m0q1">Nº série</string>
    <string name="m0q2">Nº mapa</string>
    <string name="m0q3">1. País</string>
    <string name="m0q4">2. Estado</string>
    <string name="m0q5">3. Município</string>
    <string name="m0q6">4. Comunidade</string>
    <string name="modulo0_B">B - Endereço de moradia</string>
    <string name="m0q7">5. Nome completo da pessoa que respondeu a enquete</string>
    <string name="m0q8">6. Telefones</string>
    <string name="m0q9">7. Endereço</string>
    <string name="m0q10">8. Como seria mais fácil para entrarmos em contato com vocês?</string>
    <string name="modulo0_C">C - Dados da entrevista</string>
    <string name="m0q11">9. Entrevistador 1</string>
    <string name="m0q12">10. Email</string>
    <string name="m0q13">11. Telefone</string>
    <string name="m0q14">12. Entrevistador 2</string>
    <string name="m0q15">13. Email</string>
    <string name="m0q16">14. Telefone</string>
    <string name="m0q17">15. Líder</string>
    <string name="m0q18">16. Data</string>
    <string name="m0q19">17. Resultado</string>
    <string name="m0q20">18. Hora início</string>
    <string name="m0q21">19. Hora fim</string>
    <string name="m0q22">20. Observações</string>
    <string name="modulo0_D">D - Apresentação</string>
    <string name="modulo0_E">E - Instruções básicas</string>
    <string name="m1q1">(1.01) Por favor, diga-me os nomes das pessoas que vivem nesta casa. Comece
        a lista pelo chefe do lar.</string>
    <string name="m1q2">(1.02) No momento da aplicação desta enquete, este membro da família estava
        presente?</string>
    <string name="m1q3">(1.03) [NOME] é homem ou mulher?</string>
    <string name="m1q4">(1.04) Quantos anos completos tem [NOME]?</string>
    <string name="m1q5">(1.05) Qual é a relação de parentesco de [NOME] com o chefe do lar?</string>
    <string name="m1q6">(1.06) Por favor, indique o RG de [NOME] (00-NÃO TEM, **-NÃO SABE,
        ##-NÃO RESPONDEU)</string>
    <string name="m1q7">(1.07) [NOME] está inscrito no cadastro único?</string>
    <string name="m1q8">(1.08) De que estado [NOME] vem?</string>
    <string name="m1q9">(1.09) De qual raça ou cor [NOME] se enxerga?</string>
    <string name="m1q10">(1.10) Quantas famílias (núcleos familiares) diferentes vivem nesta
        casa?</string>
    <string name="m1q11">(1.11) A que núcleo familiar pertence [NOME]? (1- Principal, 2- Segundo,
        3- Terceiro) </string>
    <string name="m2q1">(2.01) Até que série [NOME] estudou? Qual é o nível de educação mais alto
        que [NOME] completou?</string>
    <string name="m2q2">(2.02) [NOME] sabe ler e escrever?</string>
    <string name="m2q3">(2.03) Atualmente [NOME] estuda? Inclusive creche e pré-escola)</string>
    <string name="m2q4">(2.04) Em que tipo de estabelecimento de ensino (inclusive pré-escola)
        [NOME] estuda?</string>
    <string name="m2q5">(2.05) Você diria que o lugar onde [NOME] estuda está:</string>
    <string name="m2q6">(2.06) Quanto tempo [NOME] leva para chegar ao local de estudo? (responder
        em minutos)</string>
    <string name="m2q7">(2.07) Qual o principal meio de tranporte [NOME] utiliza para chegar ao
        local de estudo?</string>
    <string name="m2q8">(2.08) Se a resposta de 2.03 for sim, qual a principal razão pela qual [NOME]
        não estuda?</string>
    <string name="m3q1">(3.01) Qual a ocupação atual de [NOME]</string>
    <string name="m3q2">(3.02) Na semana passada, ou seja, entre segunda-feira e domingo, [NOME]
        trabalhou (sem considerar as tarefas do lar)?</string>
    <string name="m3q3">(3.03) Em seu trabalho atual, [NOME] tem carteira assinada?</string>
    <string name="m3q4">(3.04) [NOME] procurou trabalho ou realizou alguma ação para iniciar uma
        atividade por conta própria (negócio) nas últimas quatro semanas?</string>
    <string name="m3q5">(3.05) Qual a razão ou razões pelas quais [NOME] não procurou trabalho ou
    iniciou uma atividade autônoma nas últimas quatro semanas?</string>
    <string name="m3q6">(3.06) [NOME] está disponível para trabalhar?</string>
    <string name="m3q7">(3.07) Você diria que o lugar onde [NOME] trabalha está localizado: </string>
    <string name="m3q8">(3.08) Quanto tempo [NOME] leva para chegar ao local de trabalho? (responder
        em minutos)</string>
    <string name="m3q9">(3.09) Qual o principal meio de tranporte [NOME] utiliza para chegar ao
        local de trabalho?</string>
    <string name="m3q10">(3.10) Poderia me dizer qual a renda mensal de [NOME] (trabalho ou se faz
        bico) (00 - Não tem reda, ## - Não respondeu)</string>
    <string name="m3q11">(3.11) [NOME] recebe algum auxílio financeiro fixo do governo?</string>
    <string name="m3q12">(3.11) Quanto é este valor mensal?</string>
    <string name="m3q14">(3.14) No mês passado, a renda total do lar incluiu dinheiro enviado por
        familiares ou amigos?</string>
    <string name="m3q15">(3.15) Atualmente você ou algum integrante do lar mantém alguma dívida,
        financeira ou crediária?</string>
    <string name="m3q16">(3.16) Nos últimos 3 meses, você diria que vocês gastaram mais, menos ou
        exatamente o dinheiro que ganharam?</string>
    <string name="m3q17">(3.17) Se vocês não gastaram todo o dinheiro que ganharam significa que
        sobrou alguma coisa. Como fazem suas economias?</string>
    <string name="m3q18">(3.18) O que fizeram para cobrir a falta de dinheiro nos últimos 3 meses?</string>
    <string name="m4q1">(4.01) [NOME] frequentou algum centro de saúde nos últimos três meses?</string>
    <string name="m4q2">(4.02) Você diria que o lugar onde [NOME] trabalha está localizado: </string>
    <string name="m4q3">(4.03) Quanto tempo [NOME] leva para chegar ao local de trabalho? (responder
        em minutos)</string>
    <string name="m4q4">(4.04) Qual o principal meio de tranporte [NOME] utiliza para chegar ao
        local de trabalho?</string>
    <string name="m4q5">(4.05) Durante os últimos 30 dias, [NOME] teve diarréia?</string>
    <string name="m4q6">(4.06) Durante os últimos 30 dias, [NOME] teve alguma doencça respiratória,
    crônica ou não (quais?) (1- Renite alérgica / 2- Asma / 3- Bronquite / 4- Efisema pulmonar
    / 5- Tuberculose / 6- Outros / 7- Não) </string>
    <string name="m4q7">(4.07) Durante os últimos 30 dias, [NOME] teve algum outro problema de saúde,
    doença (crônica ou não) ou acidente?</string>
    <string name="m4q8">(4.08) [NOME] tem alguma doença crônica, que necessita de tratamento contínuo
        (quais?) (1- Hipertensão / 2- Diabétes / 3- Câncer / 4- Doenças renais (rins) / 5- Obesidade
        / 6- Hepatite / 7- Aids / 8- Outros / 9- Não) </string>
    <string name="m4q9">(4.09) [NOME] tem problema de depência de dependência de álcool ou drogas?
    </string>
    <string name="m4q10">(4.10) [NOME] é portador de alguma das seguintes deficiências? (quais?)
        (1- Não é portador de deficiência / 2- Visual / 3- Motora / 4- Auditiva / 5- Mental ou
        intelectual / 6- Outros)</string>
    <string name="m5q1">(5.01) De que tipo é a moradia que habita?</string>
    <string name="m5q2">(5.02) Qual a situação do terreno que habita?</string>
    <string name="m5q3">(5.03) Quantos cômodos há em casa? (banheiro e cozinha não são cômodos)</string>
    <string name="m5q4">(5.04) Do total de cômodos, quantos são dormintórios?</string>
    <string name="m5q5">(5.05) Quantas camas  lugares de dormir vocês usam na casa? (cama de
    solteiro = 1 lugar, sofá,etc = 1 lugar, cama de casal = 2 lugares)</string>
    <string name="m5q6">(5.06) De onde obtém a água que usam na sua casa?</string>
    <string name="m5q7">(5.07) Possui energia elétrica na sua casa?</string>
    <string name="m5q8">(5.08) Qual o tipo de banheiro que usam em sua casa?</string>
    <string name="m5q9">(5.09) Como é descartado o lixo produzido na sua casa?</string>
    <string name="m5q10">(5.10) Há quanto tempo a família vive na casa?</string>
    <string name="m5q11">(5.11) Qual o uso seria dado para a casa do TETO?</string>
    <string name="m5q12">(5.12) Material do telhado</string>
    <string name="m5q13">(5.13) Estado do telhado</string>
    <string name="m5q14">(5.14) Entra água pelo telhado?</string>
    <string name="m5q15">(5.15) Material predominante da parede</string>
    <string name="m5q16">(5.16) Estado das paredes</string>
    <string name="m5q17">(5.17) Estabilidade da parede</string>
    <string name="m5q18">(5.18) Material predominante do piso</string>
    <string name="m5q19">(5.19) Estado do piso</string>
    <string name="m5q20">(5.20) Umidade</string>
    <string name="m5q21">(5.21) Ventilação</string>
    <string name="m5q22">(5.22) Há presença de animais nocivos? (ratos, baratas, cobras, etc.)</string>
    <string name="m5q23">(5.23) Entra água pelo piso?</string>
    <string name="m5q24">(5.24) Entra esgoto regularmente na casa quando chove?</string>
    <string name="m5q25">(5.25) Qual a área da casa construída? (em metros x metros)</string>
    <string name="m5q26">(5.26) Tem perspectiva de construir casa de bloco em até seis meses?</string>
    <string name="m5q27">(5.27) Tem perspectiva de sair da comunidade em até um ano?</string>
    <string name="m6q1">(6.01) Você ou alguém da sua família enfrentam ou enfrentaram algum
    dos seguintes problemas na justiça?
        (1- Problemas legais com terreno (despejo) /
        2-Divórcio litigioso /
        3- Processos trabalhistas /
        4- Nome sujo na praça /
        5- Conselho tutelar /
        6- Histórico penal /
        7- Processos no JEC (Juizado Especial Civil) /
        8- Não tem problemas na justiça /
        9- Outros (especifique))
    </string>
    <string name="m6q2">(6.02) A família já sofreu algum processo e remoção de alguma comunidade?
    (qualquer comunidade)</string>
    <string name="m6q3">(6.03) Porque a família foi removida?</string>
    <string name="m6q4">(6.04) Como foi feita a remoção da comunidade anterior?
            (1- Auxílio aluguel /
            2- Cheque despejo /
            3- Programa habitacional /
            4- Outro motivo)
    </string>
    <string name="m6q5">(6.05) Em qual ano sua família se mudou para esta comunidade?</string>
    <string name="m6q6">(6.06) Qual é o principal motivo pelo qual a família veio morar nesta
        comunidade?</string>
    <string name="m6q7">(6.07) A família é beneficiada por algum programa  de assistência social
    do governo ou município?
            (1- Sim, carteira do idoso /
            2- Sim, Projovem /
            3- Sim, Tarifa Social (energia) /
            4- Sim, Passe livre (transporte) /
            5- Nenhum) </string>
    <string name="m6q8">(6.08) Você sofre frequentemente algum tipo de discriminaçoã ou preconceito?
        (1- Sim, carteira do idoso /
        2- Sim, Projovem /
        3- Sim, Tarifa Social (energia) /
        4- Sim, Passe livre (transporte) /
        5- Nenhum)
    </string>
    <string name="m6q9">(6.09) Você ou alguém da sua família enfrentam ou enfrentaram algum
    dos seguintes problemas na justiça?
        (1- Problemas legais com terreno (despejo) /
        2-Divórcio litigioso /
        3- Processos trabalhistas /
        4- Nome sujo na praça /
        5- Conselho tutelar /
        6- Histórico penal /
        7- Processos no JEC (Juizado Especial Civil) /
        8- Não tem problemas na justiça /
        9- Outros (especifique))
    </string>
    <string name="m6q10">(6.10) Você confia nas seguintes pessoas ou instituições?</string>
    <string name="m6q101">(6.10.1) Família</string>
</resources>