<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TETOAppTheme"
    android:layout_marginTop="50dp"
    >

    <TextView
        android:id="@+id/NOME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q1"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/m3q1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:ems="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q2"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m3q2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m3q2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q3"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m3q3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m3q3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q4"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m3q4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m3q4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q5"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m3q5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m3q5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q6"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m3q6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m3q6"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q7"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m3q7"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m3q7"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q8"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/m3q8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:ems="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q9"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m3q9"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m3q9"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q10"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/m3q10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:ems="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q11"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m3q11"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m3q11"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m3q12"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/m3q12"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:ems="10"/>

    <TextView
        android:layout_height="10dp"
        android:layout_width="match_parent"
        android:background="#000000"/>

</TableLayout>
