<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:id="@+id/mod2_new_person"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TETOAppTheme"
    android:layout_marginTop="50dp"
    >

    <TextView
        android:id="@+id/NOME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q1"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m4q1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m4q1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q2"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m4q2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m4q2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q3"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/m4q3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:ems="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q4"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m4q4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m4q4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q5"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m4q5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m4q5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q6"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/m4q6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:ems="10"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q7"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m4q7"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m4q7"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q8"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/m4q8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:ems="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q9"
        android:textSize="12sp" />
    <Spinner
        android:id="@+id/m4q9"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:entries="@array/m4q9"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m4q10"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/m4q10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:ems="10"/>

    <TextView
        android:layout_height="10dp"
        android:layout_width="match_parent"
        android:background="#000000"/>

</TableLayout>
